--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
-   <img src="images/1.jpeg" />
+  <p> You are Sexyy.... Too 😁</p>
+    <p> Killer Figure !! 🤤 </p>
+   <img src="images/3.jpg" />
 </div>
 
 <div class="paper image">
@@ -26,22 +26,27 @@
 </div>
 
 <div class="paper image">
-  <p>How can be </p>
-   <p> someone so cute ❤️ </p>
+  <p>Just Believe in youself  </p>
+   <p> You are Amazing ❤️ </p>
 
-  <img src="images/3.jpg" />
+  <img src="images/1.jpeg" />
 </div>
 
 
 
 <div class="paper red">
-<p class="p1"> and My Favorite</p>
-<p class="p2">Person 😍</p>
+<p class="p2"> "Failure doesn’t define you.</p>
+<p class="p2"> You’re hardworking and capable😍  </p>
+<p class="p2"> I know this time you’ll turn things around  </p>
 </div>
 
 <div class="paper">
-<p class="p1">You are Cute </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+<p class="p1">Best Of Luck for Your Exams!!  ❤️</p>
+<p class="p1">Best Of Luck for Your Exams!! ❤️</p>
+<!-- <p class="p1">Best Of Luck for Your Exams!! ❤️</p> -->
+  <!-- <p class="p1"> <span style="color: red !important;"></span></p>
+  <p class="p1"> <span style="color: red !important;">❤️</span></p>
+  <p class="p1"> <span style="color: red !important;">❤️</span></p> -->
 </div>
 
 <div class="paper">
